feat: Implement AI-driven financial research with a new backend analyst, updated NLP command processing, and a dedicated frontend UI for displaying strategy analyses.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,7 +85,7 @@
                 </div>
             </main>
 
-            <!-- Right: Candidates / Filter Results -->
+            <!-- Right: Insights & Ideas -->
             <aside class="right-panel">
                 <div class="panel">
                     <div class="panel-header">
@@ -93,6 +93,16 @@
                     </div>
                     <div id="candidates-list" class="list-container">
                         <p class="empty-state">Nutze den AI Befehl, um Kandidaten zu finden.</p>
+                    </div>
+                </div>
+
+                <div class="panel ideas-panel" id="ideasPanel">
+                    <div class="panel-header ideas-header">
+                        <h3>💡 Strategien</h3>
+                        <div id="ideasTabs" class="tab-bar"></div>
+                    </div>
+                    <div id="ideasContent" class="tab-content">
+                        <p class="empty-state">Frage die AI nach einer Strategie oder Analyse.</p>
                     </div>
                 </div>
             </aside>
